# motion-sensors-system

./: .gitignore  Cargo.toml  README.md  config.toml
src/: lib.rs  main.rs
src/config/: settings.rs
src/logic/: main_loop.rs
src/states/: mode.rs
tests/: sensors_tests.rs
