[package]
name = "motion-sensors-system"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.2"
chrono = "0.4.23"
env_logger = "0.9.0"
log = "0.4.17"
rppal = "0.13.1"
serde = { version = "1.0.144", features = ["derive"] }
toml = "0.5.10"
soloud = { git = "https://github.com/moalyousef/soloud-rs" }
rodio = "0.16.0"
tokio = { version = "1.27.0", features = ["full"]}
log4rs = "1.2.0"
pir-motion-sensor = "2.0.0"
tokio-util = "0.7.7"
